--- a/.github/workflows/calculate_nav.yaml
+++ b/.github/workflows/calculate_nav.yaml
@@ -70,7 +70,7 @@ jobs:
       # This step only runs if a valid NAV value was captured
       - name: Display Captured NAV
         # Added quotes around the condition as a potential fix for parsing issues
-        if: "steps.capture_nav.outputs.nav_value != ''"
+        if: steps.capture_nav.outputs.nav_value != ''
         run: echo "Captured Estimated NAV from file: ${{ steps.capture_nav.outputs.nav_value }}"
 
       # Add other steps here to *use* the captured NAV if needed
