--- a/.github/workflows/calculate_nav.yaml
+++ b/.github/workflows/calculate_nav.yaml
@@ -66,13 +66,13 @@ jobs:
             echo "nav_value=" >> $GITHUB_OUTPUT # Set empty output
           fi
 
-      # Step 6: Use Captured NAV (Example)
-      # This step only runs if a valid NAV value was captured
-      - name: Display Captured NAV
-        # Added quotes around the condition as a potential fix for parsing issues
-        if: steps.capture_nav.outputs.nav_value != ''
-        run: echo "Captured Estimated NAV from file: ${{ steps.capture_nav.outputs.nav_value }}"
+      # # Step 6: Use Captured NAV (Example)
+      # # This step only runs if a valid NAV value was captured
+      # - name: Display Captured NAV
+      #   # Added quotes around the condition as a potential fix for parsing issues
+      #   if: steps.capture_nav.outputs.nav_value != ''
+      #   run: echo "Captured Estimated NAV from file: ${{ steps.capture_nav.outputs.nav_value }}"
 
-      # Add other steps here to *use* the captured NAV if needed
-      # (e.g., commit to repo, send notification)
+      # # Add other steps here to *use* the captured NAV if needed
+      # # (e.g., commit to repo, send notification)
 
