--- a/.github/workflows/calculate_nav.yaml
+++ b/.github/workflows/calculate_nav.yaml
@@ -1,6 +1,7 @@
 name: Calculate ISUS NAV Estimate & Update Pages Data
 
 on:
+  merge: main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
